fix(week-one): fix header z-index

--- a/packages/week-one/styles/app.module.scss
+++ b/packages/week-one/styles/app.module.scss
@@ -44,7 +44,7 @@
   height: 60px;
   color: #000000;
   background: #ffffff;
-  z-index: 1;
+  z-index: 2;
 
   & > div {
     @include container;
